SUBDIRS = boilerplate

if XENO_COBALT
SUBDIRS +=	\
	cobalt	\
	analogy	\
	trank
else
SUBDIRS += mercury
endif

SUBDIRS +=		\
	copperplate	\
	smokey		\
	alchemy		\
	vxworks		\
	psos

DIST_SUBDIRS = 		\
	alchemy		\
	analogy		\
	boilerplate	\
	cobalt		\
	copperplate	\
	mercury		\
	psos		\
	smokey		\
	trank		\
	vxworks
